fix unwanted horizontal scrollbar

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,6 +15,7 @@ body {
   max-width: 100vw;
   border-bottom: 3px solid var(--accent-color);
   border-top: 3px solid var(--accent-color);
+  overflow-x: hidden;
 }
 
 main {
